# KAOS

./: .gitignore  DEMO_WALKTHROUGH.md  README.md  TEST_SCENARIOS.md  check_notion_dupes.py  debug_notion.py  debug_output.txt  deploy_workflow_example.yml  docker-compose.yml  fix_slack.py  get_slack_ids.py  list_slack_ids.py  pyproject.toml  requirements.txt  simulate_users.py  test_notion.py  test_slack.py  test_slack_message.py  update_neo4j_slack.py  verify_output.txt
agents/: base.py
agents/chatbot/: ARCHITECTURE.md  graph.py  lambda_handler.py  main.py  tools.py
agents/control_plane/: backend.py  process_manager.py
agents/ingestion/: lambda_handler.py  main.py  models.py  test_client.py
config/: .env.example  settings.py
deploy/: requirements_lambda.txt
docs/: graph_schema.md
ingestion/: main.py
prep/: 00_README.md  01_ARCHITECTURE_AND_COMPONENTS.md  02_INTERVIEW_QUESTIONS.md
reference/: .cursorrules  ARCHITECTURE.md  SCHEMA.md  TOPICS.md
scripts/: clear_slack_channel.py  debug_notion_client.py  debug_notion_help.py  debug_notion_manual.py  debug_notion_requests.py  demo_bot_query.py  demo_full_pipeline.py  migrate_sqlite_to_postgres.py  produce_ops_event.py  produce_pr_event.py  produce_test_event.py  reset_kafka.py  reset_state.py  seed_neo4j.py  setup_kafka.py  simulate_ci_cd.py  simulate_git.py  start_demo.ps1  test_kafka_connection.py  verify_chatbot.py  verify_logging.py  verify_notion_fix.py  verify_persistence.py
shared/: logger.py
tests/: test_e2e_flow.py  test_escalation.py  verify_connectivity.py  verify_lambda_handlers.py
(+44 files in other folders)
