[tool.poetry]
name = "kaos"
version = "0.1.0"
description = "Kafka Automated Ops System"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "shared"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.8.0"
neo4j = "^5.27.0"
boto3 = "^1.35.90"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
langgraph = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
